--- a/SatelliteApp/SatelliteApp/Properties/Settings.settings
+++ b/SatelliteApp/SatelliteApp/Properties/Settings.settings
@@ -17,5 +17,20 @@
     <Setting Name="MapProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)">GoogleMap</Value>
     </Setting>
+    <Setting Name="UartSpeed" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">9600</Value>
+    </Setting>
+    <Setting Name="DeviceAddr" Type="System.String" Scope="User">
+      <Value Profile="(Default)">192.168.1.1</Value>
+    </Setting>
+    <Setting Name="HomeLat" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="HomeLong" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="HomeAlt" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
