--- a/SatelliteApp/SatelliteApp/Properties/Settings.settings
+++ b/SatelliteApp/SatelliteApp/Properties/Settings.settings
@@ -17,10 +17,7 @@
     <Setting Name="MapProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)">GoogleMap</Value>
     </Setting>
-    <Setting Name="UartSpeed" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">9600</Value>
-    </Setting>
-    <Setting Name="DeviceAddr" Type="System.String" Scope="User">
+    <Setting Name="DeviceUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">192.168.1.1</Value>
     </Setting>
     <Setting Name="HomeLat" Type="System.String" Scope="User">
